Name:              staticanalysis
Version:           0.0.0.4
Cabal-Version:     >= 1.6
License:           MIT
License-File:      LICENSE
Synopsis:          Reusable static analysis interfaces and modules.
Description:       Reusable static analysis interfaces and modules.
Category:          Compilers/Interpreters, Language
Author:            Andrei Lapets
Maintainer:        Andrei Lapets <a@lapets.io>
Build-Type:        Simple

Library
  Exposed-Modules: StaticAnalysis.All,
                   StaticAnalysis.Analysis,
                   StaticAnalysis.Annotate,
                   StaticAnalysis.Analyze
  Build-Depends:   base >= 3 && < 5,
                   MissingH

Source-Repository head
  Type:            git
  Location:        https://github.com/lapets/staticanalysis
